--- a/index.html
+++ b/index.html
@@ -1,20 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic Tac Toe</title>
 
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <header>
+      <h1>Tic Tac Toe</h1>
+      <h6>The game everyone knows and loves</h6>
+    </header>
+    <form id="sign-up">
+      <fieldset>
+        <legend>Sign up!</legend>
+        <input type= "email" name= "credentials[email]" placeholder="enter your email">
+        <input type= "password" name= "credentials[password]" placeholder="enter your password">
+        <input type= "password" name= "credentials[password_confirmation]" placeholder="confirm your password">
+        <input type="submit" name="submit" value="Sign up!">
+      </fieldset>
+    </form>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+    <form id="sign-in">
+      <fieldset>
+        <legend>Sign in!</legend>
+        <input type= "email" name= "credentials[email]" placeholder="enter your email">
+        <input type= "password" name= "credentials[password]" placeholder="enter your password">
+        <input type="submit" name="submit" value="Sign in!">
+      </fieldset>
+    </form>
+
+    <form id="change-password">
+      <fieldset>
+        <legend>Change Password!</legend>
+        <input type= "password" name= "passwords[old]" placeholder="enter your old password">
+        <input type= "password" name= "passwords[new]" placeholder="enter your new password">
+        <input type="submit" name="submit" value="Change Password!">
+      </fieldset>
+    </form>
+
+    <form id="sign-out">
+      <fieldset>
+        <legend>Sign Out!</legend>
+        <input type="submit" name="submit" value="Sign Out!">
+      </fieldset>
+    </form>
     </body>
 </html>
