--- a/index.html
+++ b/index.html
@@ -11,39 +11,59 @@
       <h1>Tic Tac Toe</h1>
       <h6>The game everyone knows and loves</h6>
     </header>
-    <form id="sign-up">
-      <fieldset>
-        <legend>Sign up!</legend>
-        <input type= "email" name= "credentials[email]" placeholder="enter your email">
-        <input type= "password" name= "credentials[password]" placeholder="enter your password">
-        <input type= "password" name= "credentials[password_confirmation]" placeholder="confirm your password">
-        <input type="submit" name="submit" value="Sign up!">
-      </fieldset>
-    </form>
+    <nav class="navbar">
+      <button type="button" id="sign-up" class="btn btn-default">Sign Up</button>
+      <button type="button" id="sign-in" class="btn btn-default">Sign In</button>
+      <button type="button" id="sign-out" class="btn btn-default">Sign Out</button>
+      <button type="button" id="change-password" class="btn btn-default">Change Password</button>
+    </nav>
 
-    <form id="sign-in">
-      <fieldset>
-        <legend>Sign in!</legend>
-        <input type= "email" name= "credentials[email]" placeholder="enter your email">
-        <input type= "password" name= "credentials[password]" placeholder="enter your password">
-        <input type="submit" name="submit" value="Sign in!">
-      </fieldset>
-    </form>
+    <div class="container">
+      <section class="row">
+        <article class="col-xs-4">X</article>
+        <article class="col-xs-4">X</article>
+        <article class="col-xs-4">O</article>
+      </section>
+      <section class="row">
+        <article class="col-xs-4">O</article>
+        <article class="col-xs-4">X</article>
+        <article class="col-xs-4">X</article>
+      </section>
+      <section class="row">
+        <article class="col-xs-4">O</article>
+        <article class="col-xs-4">X</article>
+        <article class="col-xs-4">X</article>
+      </section>
+    </div>
 
-    <form id="change-password">
-      <fieldset>
-        <legend>Change Password!</legend>
-        <input type= "password" name= "passwords[old]" placeholder="enter your old password">
-        <input type= "password" name= "passwords[new]" placeholder="enter your new password">
-        <input type="submit" name="submit" value="Change Password!">
-      </fieldset>
-    </form>
+      <div class="row">
+        <div>
+          <h1>Player's Record</h1>
+        </div>
+      </div>
 
-    <form id="sign-out">
-      <fieldset>
-        <legend>Sign Out!</legend>
-        <input type="submit" name="submit" value="Sign Out!">
-      </fieldset>
-    </form>
+
+
+<div class="modal fade" id="signInModal" data-backdrop="static" tabindex="1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+          <input anme="credentials[email]" placeholder="Email Address">
+          <input anme="credentials[passwrod]" placeholder="Password">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     </body>
 </html>
