--- a/index.html
+++ b/index.html
@@ -46,14 +46,8 @@
   </fieldset>
 </form>
 
-<!-- <form id="sign-out">
-  <fieldset>
-    <legend>Sign Out</legend>
-    <input type="submit" name="submit" value="Sign Out">
-  </fieldset>
-</form> -->
 
-    <div class="container">
+    <!-- <div class="container">
       <section class="row">
         <article class="col-xs-4">X</article>
         <article class="col-xs-4">X</article>
@@ -69,33 +63,13 @@
         <article class="col-xs-4">X</article>
         <article class="col-xs-4">X</article>
       </section>
-    </div>
+    </div> -->
 
       <div class="row">
         <div>
           <h1>Player's Record</h1>
         </div>
       </div>
-      <!--
-          <div class="modal fade" id="signInModal" data-backdrop="static" tabindex="1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title">Modal title</h4>
-                </div>
-                <div class="modal-body">
-                  <form>
-                    <input anme="credentials[email]" placeholder="Email Address">
-                    <input anme="credentials[passwrod]" placeholder="Password">
-                  </form>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div> -->
+      
     </body>
 </html>
