--- a/index.html
+++ b/index.html
@@ -46,8 +46,25 @@
   </fieldset>
 </form>
 
-
-    <!-- <div class="container">
+<div class="game-board">
+    <div class="row article">
+      <div class="col-xs-4">X</div>
+      <div class="col-xs-4">X</div>
+      <div class="col-xs-4">O</div>
+    </div>
+    <div class="row article">
+      <div class="col-xs-4">X</div>
+      <div class="col-xs-4">X</div>
+      <div class="col-xs-4">O</div>
+    </div>
+    <div class="row article">
+      <div class="col-xs-4">X</div>
+      <div class="col-xs-4">X</div>
+      <div class="col-xs-4">O</div>
+    </div>
+  </div>
+<!--
+    <div class="container">
       <section class="row">
         <article class="col-xs-4">X</article>
         <article class="col-xs-4">X</article>
@@ -70,6 +87,6 @@
           <h1>Player's Record</h1>
         </div>
       </div>
-      
+
     </body>
 </html>
