JS sign in issues fixed sign in forms launch when button is clicked, and the form hides once the user hits submit.

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 
     <div class="container">
       <section class="row">
-        <article class="col-xs-4">X</article>
-        <article class="col-xs-4">X</article>
-        <article class="col-xs-4">O</article>
+        <article class="col-xs-4"></article>
+        <article class="col-xs-4"></article>
+        <article class="col-xs-4"></article>
       </section>
       <section class="row">
-        <article class="col-xs-4">O</article>
-        <article class="col-xs-4">X</article>
-        <article class="col-xs-4">X</article>
+        <article class="col-xs-4"></article>
+        <article class="col-xs-4"></article>
+        <article class="col-xs-4"></article>
       </section>
       <section class="row">
-        <article class="col-xs-4">O</article>
-        <article class="col-xs-4">X</article>
-        <article class="col-xs-4">X</article>
+        <article class="col-xs-4"></article>
+        <article class="col-xs-4"></article>
+        <article class="col-xs-4"></article>
       </section>
     </div>
 
