updating logic I have to rework some code to stop a circular referrence. Code is currently broken. I will fix on next branch

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 
     <div class="container">
       <section class="row">
-        <article class="col-xs-4" data-id=0></article>
-        <article class="col-xs-4" data-id=1></article>
-        <article class="col-xs-4" data-id=2></article>
+        <article class="col-xs-4" data-index=0></article>
+        <article class="col-xs-4" data-index=1></article>
+        <article class="col-xs-4" data-index=2></article>
       </section>
       <section class="row">
-        <article class="col-xs-4" data-id=3></article>
-        <article class="col-xs-4" data-id=4></article>
-        <article class="col-xs-4" data-id=5></article>
+        <article class="col-xs-4" data-index=3></article>
+        <article class="col-xs-4" data-index=4></article>
+        <article class="col-xs-4" data-index=5></article>
       </section>
       <section class="row">
-        <article class="col-xs-4" data-id=6></article>
-        <article class="col-xs-4" data-id=7></article>
-        <article class="col-xs-4" data-id=8></article>
+        <article class="col-xs-4" data-index=6></article>
+        <article class="col-xs-4" data-index=7></article>
+        <article class="col-xs-4" data-index=8></article>
       </section>
     </div>
 
