separation of concerns is complete i am back to where I was yesterday. need to work on game logic again

--- a/index.html
+++ b/index.html
@@ -45,25 +45,7 @@
     <input type="submit" name="submit" value="Change Password">
   </fieldset>
 </form>
-<!--
-<div class="game-board">
-    <div class="row article">
-      <div class="col-xs-4">X</div>
-      <div class="col-xs-4">X</div>
-      <div class="col-xs-4">O</div>
-    </div>
-    <div class="row article">
-      <div class="col-xs-4">X</div>
-      <div class="col-xs-4">X</div>
-      <div class="col-xs-4">O</div>
-    </div>
-    <div class="row article">
-      <div class="col-xs-4">X</div>
-      <div class="col-xs-4">X</div>
-      <div class="col-xs-4">O</div>
-    </div>
-  </div> -->
-
+  <div class="board">
     <div class="container">
       <section class="row">
         <article class="col-xs-4" data-index=0></article>
@@ -81,6 +63,7 @@
         <article class="col-xs-4" data-index=8></article>
       </section>
     </div>
+  </div>
 
       <div class="row">
         <div>
