Game logic All game logic is functioning correctly. I am getting the desired results in the command line

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <button type="button" id="sign-in-button" class="btn btn-default">Sign In</button>
       <button type="button" id="change-password-button" class="btn btn-default">Change Password</button>
       <button type="button" id="sign-out-button" class="btn btn-default">Sign Out</button>
+      <button type="button" id="new--game-button" class="btn btn-default">Start New Game</button>
+      <button type="button" id="get-games-button" class="btn btn-default">Get Game Stats</button>
     </nav>
 
     <form id="sign-up">
