Final commit before deploying still a few issues to work out.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         <div>
           <button type="button" id="get-games-button" class="btn btn-default">Get Game Stats</button>
         </div>
+        <div class=game-message-board id="game-message">
+        </div>
       </div>
 
     </body>
